# sqlite_manager

./: README.md
src/: AboutDialog.cpp  AboutDialog.h  Assistant.cpp  Assistant.h  BaseObject.cpp  BaseObject.h  CMakeLists.txt  Database.cpp  Database.h  DatabaseListWidget.cpp  DatabaseListWidget.h  DatabaseNameDialog.cpp  DatabaseNameDialog.h  DetailWidget.cpp  DetailWidget.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  PathAlgo.cpp  PathAlgo.h  Serilizer.cpp  Serilizer.h  appMain.cpp
